v0.7.4:
- Fix always cast spells being dumped alongside the regular spells with the dump command
- Improve the dump sound

v0.7.3:
- Fix bug with auto storage

v0.7.2:
- Fix storage not getting saved after dumping spells
- Fix dump audio still playing even if sounds are disabled in the settings

v0.7.1:
- Remove default dump keybind, you should bind it manually now to avoid accidentally dumping stuff

v0.7.0:
- Add button (press L-Shift) and key shortcut (requires M-Néé) to dump all spells from active wand to storage
- Fix "" spell bugging out the interface
- Fix spell uses not being shown correctly
- Fix interaction with unlimited spells

v0.6.0:
- Add setting for closing spell inventory when inventory is opened
- Add some compatibility with Entangled Worlds when dropping spells from inv/storage

v0.5.0:
- Add sorting by spell type
- Removed "Sort" button, sorting now happens instantly on clicking the corresponding sort buttons, left click ascending, right click descending

v0.4.4:
- FIX: Spell uses were restored when dropping spells into world
- FIX: Unlimited spells perk not updating spell charges in storage
- FIX: Picking up a spell recharge with unlimited spells perk would restore the charges in storage to normal
  (this one was just visual since it would get restored to unlimited on equip anyway)
- FIX: Dragging a spell stack from storage onto an existing one in inventory should no longer make an item of the stack disappear

v0.4.3:
- FIX: Items that aren't spells will no longer be auto-stored when the option is on

v0.4.2:
- FIX: Storage was not saved after dropping spells into the world

v0.4.1:
- Add compatibility with different vanilla slot gfx sizes
- Change button graphics

v0.4.0:
- Add setting for refreshing spells in storage when picking up spell refresh
- Add back keybind support with M-Néé
- FIX: Slots would bug after polymorph

v0.3.0:
- Add sounds and setting to turn them off again